[package]
name = "typst-web"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.146"
typst = "0.14.2"
typst-as-lib = "0.15.0"
typst-pdf = "0.14.2"
wasm-bindgen = "0.2.106"

[lib]
crate-type = ["cdylib"]
